# eosc-data-transfer-client

./: .gitignore  .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: getting-started.md  index.md
docs/reference/: client.md  endpoints.md  exceptions.md  models.md
eosc_data_transfer_client/: __init__.py  client.py  endpoints.py  exceptions.py  models.py  utils.py
examples/: README.md  example.py  parse_and_transfer.py  parser.py  transfer.py  userinfo.py
tests/: test_endpoints.py
